[metadata]
name = gadwall
version = 0.2.0
author = Miki Tebeka
author_email = miki.tebeka@gmail.com
description = A command line client to duckdb
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tebeka/gadwall
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
py_modules =
    gadwall
install_requires =
    duckdb>=0.4.0
